Fix for z-index for draggable.

--- a/src/FormBuilder/assets/style.css
+++ b/src/FormBuilder/assets/style.css
@@ -10,3 +10,7 @@
   margin-bottom: 5 !important;
   text-align: left !important;
 }
+
+.sortable-helper {
+  z-index: 1000px !important;
+}
